add SmiBitArray which is optimized for <=32 booleans and use it

--- a/src/System.Data.SqlClient/src/System.Data.SqlClient.csproj
+++ b/src/System.Data.SqlClient/src/System.Data.SqlClient.csproj
@@ -28,6 +28,7 @@
     <Compile Include="Microsoft\SqlServer\Server\ExtendedClrTypeCode.cs" />
     <Compile Include="Microsoft\SqlServer\Server\MemoryRecordBuffer.cs" />
     <Compile Include="Microsoft\SqlServer\Server\MetadataUtilsSmi.cs" />
+    <Compile Include="Microsoft\SqlServer\Server\SmiBitArray.cs" />
     <Compile Include="Microsoft\SqlServer\Server\SmiEventSink.cs" />
     <Compile Include="Microsoft\SqlServer\Server\SmiEventSink_Default.cs" />
     <Compile Include="Microsoft\SqlServer\Server\SmiGettersStream.cs" />
